# MEnGPT

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py  config.py  main.py
tests/: test_api.py
